unpacking upload directory