@@ -2,6 +2,7 @@ package CreepTenuous.services.directory.upload.services.impl;
 
 import CreepTenuous.api.controllers.directory.upload.response.ResponseUploadDirectory;
 import CreepTenuous.services.directory.builder.enums.Directory;
+import CreepTenuous.services.directory.upload.containers.ContainerUploadFile;
 import CreepTenuous.services.directory.upload.services.IUploadDirectory;
 import CreepTenuous.services.directory.upload.services.IUnpackingDirectory;
 import CreepTenuous.services.directory.utils.build.BuildDirectoryPath;
@@ -27,13 +28,14 @@ public class UploadDirectory implements IUploadDirectory, IUnpackingDirectory {
             Flux<FilePart> directory
     ) throws NoSuchFileException {
         Path path = Path.of(buildDirectoryPath.build(parents));
+        final ContainerUploadFile container = new ContainerUploadFile();
         final ResponseUploadDirectory dataSuccessTrue = new ResponseUploadDirectory(true);
 
         return directory.flatMap(
-                it -> it.transferTo(Paths.get(
-                        path + Directory.SEPARATOR.get() + it.filename())
-                ))
-                .then(unpacking())
+                it -> it.transferTo(
+                        container.setFile(Path.of(path + Directory.SEPARATOR.get() + it.filename())))
+                )
+                .then(unpacking(container, path))
                 .then(Mono.just(dataSuccessTrue));
     }
 }
